Fix blocks sidebar-nav/news

--- a/app/all-categories-grid.html
+++ b/app/all-categories-grid.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	@@include('_head.html',{
+	@@include('blocks/_head.html',{
 		"title":"Home"
 	})
 <body>
 
 	<div class="wrapper">
-	@@include('_header.html')
+	@@include('blocks/_header.html')
 		<main class="page">
-			@@include('_page-policy.html')
+			@@include('blocks/_page-policy.html')
 			<!-- breadcrumbs -->
 			<div class="breadcrumbs">
 				<div class="container">
@@ -1222,9 +1222,9 @@
 			<!-- all-categories-grid end -->
 
 		</main>
-		@@include('_footer.html')
+		@@include('blocks/_footer.html')
 	</div>
 
-	@@include('_js.html')
+	@@include('blocks/_js.html')
 </body>
 </html>
