--- a/app/blog-col.html
+++ b/app/blog-col.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-	@@include('_head.html',{
+	@@include('blocks/_head.html',{
 		"title":"Blog col"
 	})
 <body>
 
 	<div class="wrapper">
-	@@include('_header.html')
+	@@include('blocks/_header.html')
 		<main class="page">
-			@@include('_page-policy.html')
-			@@include('_breadcrumbs.html',{
+			@@include('blocks/_page-policy.html')
+			@@include('blocks/_breadcrumbs.html',{
 				"breadcrumbs-name":"Blog listing"
 			})
 			<!-- blog-list -->
@@ -241,9 +241,9 @@
 			</div>
 			<!-- blog-list end -->
 		</main>
-		@@include('_footer.html')
+		@@include('blocks/_footer.html')
 	</div>
 
-	@@include('_js.html')
+	@@include('blocks/_js.html')
 </body>
 </html>
