--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	@@include('_head.html',{
+	@@include('blocks/_head.html',{
 		"title":"Home"
 	})
 <body>
 
 	<div class="wrapper">
-	@@include('_header.html')
+	@@include('blocks/_header.html')
 		<main class="page">
 			<div class="container">
 				<!-- main-slider -->
@@ -85,66 +85,37 @@
 						<div class="shop-col__sidebar">
 
 							<!-- sidebar-nav -->
-							@@include('_sidebar-nav.html',{
+							@@include('blocks/_sidebar-nav.html',{
 								"sidebar-nav__class":"shop-col__sidebar-nav",
 								"sidebar-nav__title":"All Categories"
 							})
 							<!-- sidebar-nav end -->
 
 							<!-- sidebar-new -->
-							@@include('_sidebar-new.html',{
+							@@include('blocks/_sidebar-new.html',{
 								"sidebar-new__class":"shop-col__sidebar-new",
 								"sidebar-new__title":"new arrival"
 							})
 							<!-- sidebar-new end -->
 
-							<!-- sidebar-block -->
-							<div class="shop-col__sidebar-block sidebar-block">
-								<div class="sidebar-block__img">
-									<a href="#">
-										<img src="img/newsletter/bg.jpg" alt="">
-									</a>
-								</div>
-							</div>
-							<!-- sidebar-block end -->
-
 							<!-- sidebar-news -->
-							<div class="shop-col__sidebar-news sidebar-news">
-								<div class="sidebar-news__title sidebar__title">latest NEWS</div>
-								<a href="#"> 
-									<div class="sidebar-news__item">
-										<div class="sidebar-news__item-img">
-											<a href="#">
-												<img src="img/news/03.jpg" alt="">
-											</a>
-										</div>
-										<div class="sidebar-news__item-body">
-											<a class="sidebar-news__item-title" href="#">2016 Summer Women Chiffon Short | <span>By KOMODOART</span></a>
-											<div class="sidebar-news__item-descr">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</div>
-											<a class="sidebar-news__item-btn btn" href="#">Read more</a>
-										</div>
-									</div>
-								</a>
-							</div>
+							@@include('blocks/_sidebar-news.html',{
+								"sidebar-news__class":"shop-col__sidebar-news"
+							})
 							<!-- sidebar-news end -->
 
+							<!-- sidebar-block -->
+							@@include('blocks/_sidebar-block.html',{
+								"sidebar-block__class":"shop-col__sidebar-block",
+								"sidebar-block__link":"#",
+								"sidebar-block__img":"img/newsletter/bg.jpg"
+							})
+							<!-- sidebar-block end -->
+
 							<!-- sidebar-tags -->
-							<div class="shop-col__sidebar-tags sidebar-tags">
-								<div class="sidebar-tags__title sidebar__title">Popular tags</div>
-								<ul class="sidebar-tags__list">
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Shopping</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Coffee maker</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Coffee</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Wordpress</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Responsive</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Shoping online</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Work</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Design</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Coffee</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Bestsalers</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Most wanted</a></li>
-								</ul>
-							</div>
+							@@include('blocks/_sidebar-tags.html',{
+								"sidebar-tags__class":"shop-col__sidebar-tags"
+							})
 							<!-- sidebar-tags end -->
 
 						</div>
@@ -1014,9 +985,9 @@
 			</div>
 			<!-- policy end -->
 		</main>
-		@@include('_footer.html')
+		@@include('blocks/_footer.html')
 	</div>
 
-	@@include('_js.html')
+	@@include('blocks/_js.html')
 </body>
 </html>
