Fix block featured-product

--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -270,353 +270,17 @@
 							<!-- featured-product -->
 							<div class="shop-col__content-featured featured-product">
 								<div class="featured__main-title sidebar__title">
-									<span>Featured products	 	on sale		   Most wanted	</span>
+									<ul class="featured-product__title-list">
+										<li class="featured-product__title-item"><a class="featured-product__title-link active" href="#">Featured products</a></li>
+										<li class="featured-product__title-item"><a class="featured-product__title-link" href="#">on sale</a></li>
+										<li class="featured-product__title-item"><a class="featured-product__title-link" href="#">Most wanted</a></li>
+									</ul>
 								</div>
 
-								<div class="featured-product__slider">
-									<div class="featured-product__slider-item">
-										<div class="featured-product__slider-cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/01.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
-													<span class="cart__body-price">$49.87</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like active"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/02.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Keurig K-Elite Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, With Iced Coffee Capability, Brushed Gold | 
-													<span class="cart__body-price">$163.01</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/03.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Mr. Coffee 10 Cup Coffee Maker | Optimal Brew Thermal System | 
-													<span class="cart__body-price">$59.99</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/04.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Keurig K-Select Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, With Strength Control and Hot Water On Demand, Matte Black | 
-													<span class="cart__body-price">$129.45</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle active"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/05.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Keurig K-Classic Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, 6 to 10 oz. Brew Sizes, Black | 
-													<span class="cart__body-price">$79.00</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/06.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Cuisinart DCC-3200P1 DCC-3200CP Perfectemp Coffee Maker, 14 Cup Progammable with Glass Carafe, Stainless Steel | 
-													<span class="cart__body-price">$99.95</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/07.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Hamilton Beach 2-Way Brewer Coffee Maker, Single-Serve and 12-Cup Pot, Stainless Steel (49980A), Carafe | 
-													<span class="cart__body-price">$59.99</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/08.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Keurig K-Mini Plus Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, Comes With 6 to 12 oz. Brew Size, K-Cup Pod Storage, and Travel Mug Friendly, Black | 
-													<span class="cart__body-price">$99.99</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured-product__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/09.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="#">
-													Ninja CE251 Programmable Brewer, with 12-cup Glass Carafe, Black and Stainless Steel Finish | 
-													<span class="cart__body-price">$79.99</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
+								@@include('blocks/_featured__slider.html',{
+									"featured__slider-class":"featured__slider--sm"
+								})
+
 							</div>
 							<!-- featured-product end -->
 
