Fix block policy

--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@
 								<div class="policy__item-body">
 									<div class="policy__item-title">Freeshipping on order over $100 </div>
 									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-									<a class="policy__item-btn btn" href="#">READ MORE</a>
+									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
 						</div>
@@ -142,7 +142,7 @@
 								<div class="policy__item-body">
 									<div class="policy__item-title">10% off the bill</div>
 									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-									<a class="policy__item-btn btn" href="#">READ MORE</a>
+									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 								<div class="policy__item-body">
 									<div class="policy__item-title">Security payment</div>
 									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-									<a class="policy__item-btn btn" href="#">READ MORE</a>
+									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
 						</div>
@@ -166,7 +166,7 @@
 								<div class="policy__item-body">
 									<div class="policy__item-title">live Support</div>
 									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-									<a class="policy__item-btn btn" href="#">READ MORE</a>
+									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
 						</div>
