--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -289,12 +289,16 @@
 								<div class="information-product__row">
 									<div class="information-product__column">
 										<div class="information-product__item">
-											<img class="information-product__img" src="img/all-categories/05-1.jpg" alt="">
+											<a href="#">
+												<img class="information-product__img" src="img/all-categories/05-1.jpg" alt="">
+											</a>
 										</div>
 									</div>
 									<div class="information-product__column">
 										<div class="information-product__item">
-											<img class="information-product__img" src="img/all-categories/05-1.jpg" alt="">								
+											<a href="#">
+												<img class="information-product__img" src="img/all-categories/05-1.jpg" alt="">								
+											</a>
 										</div>
 									</div>
 								</div>
@@ -395,33 +399,33 @@
 												new
 											</div>
 											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/01.jpg" alt="">
+												<a href="detail.html">
+													<img src="img/cart/02.jpg" alt="">
 												</a>
 											</div>
 											<div class="cart__body">
 												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
+													<div class="cart__rating" data-total-value="0">
+														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+													</div>
 													<ul class="cart__body-color">
 														<li></li>
 														<li></li>
 													</ul>
 												</div>
-												<a class="cart__body-title" href="#">
-													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
-													<span class="cart__body-price">$49.87</span>
+												<a class="cart__body-title" href="detail.html">
+													Keurig K-Elite Coffee Maker 
+													<span class="cart__body-price">$163.01</span>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
 													<div class="cart__body-actions">
 														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+														<div class="cart__body-like"><i class="icon-heart"></i></div>
 													</div>
 												</div>
 											</div>
@@ -433,33 +437,33 @@
 												new
 											</div>
 											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/01.jpg" alt="">
+												<a href="detail.html">
+													<img src="img/cart/04.jpg" alt="">
 												</a>
 											</div>
 											<div class="cart__body">
 												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
+													<div class="cart__rating" data-total-value="0">
+														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+													</div>
 													<ul class="cart__body-color">
 														<li></li>
 														<li></li>
 													</ul>
 												</div>
-												<a class="cart__body-title" href="#">
-													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
-													<span class="cart__body-price">$49.87</span>
+												<a class="cart__body-title" href="detail.html">
+													Keurig K-Elite Coffee Maker 
+													<span class="cart__body-price">$163.01</span>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
 													<div class="cart__body-actions">
 														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+														<div class="cart__body-like"><i class="icon-heart"></i></div>
 													</div>
 												</div>
 											</div>
@@ -471,33 +475,33 @@
 												new
 											</div>
 											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/01.jpg" alt="">
+												<a href="detail.html">
+													<img src="img/cart/05.jpg" alt="">
 												</a>
 											</div>
 											<div class="cart__body">
 												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
+													<div class="cart__rating" data-total-value="0">
+														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+													</div>
 													<ul class="cart__body-color">
 														<li></li>
 														<li></li>
 													</ul>
 												</div>
-												<a class="cart__body-title" href="#">
-													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
-													<span class="cart__body-price">$49.87</span>
+												<a class="cart__body-title" href="detail.html">
+													Keurig K-Elite Coffee Maker 
+													<span class="cart__body-price">$163.01</span>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
 													<div class="cart__body-actions">
 														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+														<div class="cart__body-like"><i class="icon-heart"></i></div>
 													</div>
 												</div>
 											</div>
@@ -509,33 +513,33 @@
 												new
 											</div>
 											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/01.jpg" alt="">
+												<a href="detail.html">
+													<img src="img/cart/06.jpg" alt="">
 												</a>
 											</div>
 											<div class="cart__body">
 												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
+													<div class="cart__rating" data-total-value="0">
+														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+													</div>
 													<ul class="cart__body-color">
 														<li></li>
 														<li></li>
 													</ul>
 												</div>
-												<a class="cart__body-title" href="#">
-													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
-													<span class="cart__body-price">$49.87</span>
+												<a class="cart__body-title" href="detail.html">
+													Keurig K-Elite Coffee Maker 
+													<span class="cart__body-price">$163.01</span>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
 													<div class="cart__body-actions">
 														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+														<div class="cart__body-like"><i class="icon-heart"></i></div>
 													</div>
 												</div>
 											</div>
@@ -547,38 +551,39 @@
 												new
 											</div>
 											<div class="cart__img">
-												<a href="#">
-													<img src="img/cart/01.jpg" alt="">
+												<a href="detail.html">
+													<img src="img/cart/07.jpg" alt="">
 												</a>
 											</div>
 											<div class="cart__body">
 												<div class="cart__body-header">
-													<ul class="cart__body-star">
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-														<li><i class="icon-star"></i></li>
-													</ul>
+													<div class="cart__rating" data-total-value="0">
+														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+													</div>
 													<ul class="cart__body-color">
 														<li></li>
 														<li></li>
 													</ul>
 												</div>
-												<a class="cart__body-title" href="#">
-													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
-													<span class="cart__body-price">$49.87</span>
+												<a class="cart__body-title" href="detail.html">
+													Keurig K-Elite Coffee Maker 
+													<span class="cart__body-price">$163.01</span>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
 													<div class="cart__body-actions">
 														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+														<div class="cart__body-like"><i class="icon-heart"></i></div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
+
 
 								</div>
 
@@ -605,7 +610,7 @@
 							<div class="policy__item-body">
 								<div class="policy__item-title policy__item-title--white">Freeshipping on order over $100 </div>
 								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-								<a class="policy__item-btn btn" href="#">READ MORE</a>
+								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
 					</div>
@@ -617,7 +622,7 @@
 							<div class="policy__item-body">
 								<div class="policy__item-title policy__item-title--white">10% off the bill</div>
 								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-								<a class="policy__item-btn btn" href="#">READ MORE</a>
+								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
 					</div>
@@ -629,7 +634,7 @@
 							<div class="policy__item-body">
 								<div class="policy__item-title policy__item-title--white">Security payment</div>
 								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-								<a class="policy__item-btn btn" href="#">READ MORE</a>
+								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
 					</div>
@@ -641,7 +646,7 @@
 							<div class="policy__item-body">
 								<div class="policy__item-title policy__item-title--white">live Support</div>
 								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
-								<a class="policy__item-btn btn" href="#">READ MORE</a>
+								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
 					</div>
