Fix page detail

--- a/app/blocks/_js.html
+++ b/app/blocks/_js.html
@@ -4,4 +4,5 @@
 	</script> -->
 	<script src="js/libs.min.js"></script>
 	<script src="js/script.min.js"></script>
+	<script src="js/mixitup.js"></script>
 	<!-- <script>svg4everybody();</script> -->
