--- a/app/blocks/_sidebar-new.html
+++ b/app/blocks/_sidebar-new.html
@@ -1,6 +1,6 @@
 							<div class="@@sidebar-new__class sidebar-new">
 								<div class="sidebar-new__title sidebar__title">@@sidebar-new__title</div>
-								<a href="#"> 
+								<a class="sidebar-new__link" href="detail.html"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
 											<img src="img/cart/02.jpg" alt="">
@@ -8,7 +8,7 @@
 										<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C <span>$15.00</span></div>
 									</div>
 								</a>
-								<a href="#"> 
+								<a class="sidebar-new__link" href="detail.html"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
 											<img src="img/cart/03.jpg" alt="">
@@ -18,7 +18,7 @@
 										</div>
 									</div>
 								</a>
-								<a href="#"> 
+								<a class="sidebar-new__link" href="detail.html"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
 											<img src="img/cart/01.jpg" alt="">
@@ -28,7 +28,7 @@
 										</div>
 									</div>
 								</a>
-								<a href="#"> 
+								<a class="sidebar-new__link" href="detail.html"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
 											<img src="img/cart/07.jpg" alt="">
