--- a/app/detail.html
+++ b/app/detail.html
@@ -16,7 +16,7 @@
 						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Home</a></li>
 						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Kitcheng electricals</a></li>
 						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Coffee machines</a></li>
-						<li class="breadcrumbs__item">Gucci GG1008 Eyeglasses Gucci Eyeglasses  </li>
+						<li class="breadcrumbs__item">Cuisinart DCC-3200P1 Perfectemp Coffee Maker</li>
 					</ul>
 				</div>
 			</div>
@@ -94,7 +94,7 @@
 												<span class="cart-detail__colors-color" primary="#444" color="black"></span>
 											</div>
 										</div>
-										<div class="cart-detail__actions">
+										<div class="cart-detail__actions cart-detail__actions--1">
 											<div class="cart-detail__actions-quantity">
 												Qty:
 												<div class="quantity">
@@ -102,10 +102,10 @@
 												</div>
 											</div>
 											<a class="cart-detail__actions-btn btn" href="#">Add to cart</a>
-											<div class="cart__body-shuffle cart-detail__actions-like"><i class="cart-detail__actions-icon icon-shuffle"></i>Add to compare</div>
-											<div class="cart__body-like cart-detail__actions-like"><i class="cart-detail__actions-icon icon-heart"></i>Add to wishlist</div>
+											<div class="cart__body-shuffle cart-detail__actions-like"><i class="cart-detail__actions-icon icon-shuffle"></i><span>Add to compare</span></div>
+											<div class="cart__body-like cart-detail__actions-like"><i class="cart-detail__actions-icon icon-heart"></i><span>Add to wishlist</span></div>
 										</div>
-										<div class="cart-detail__actions">
+										<div class="cart-detail__actions cart-detail__actions--2">
 											<div class="cart-detail__actions-company">
 												<ul class="cart-detail__actions-list">
 													<li class="cart-detail__actions-item">SKU:</li>
@@ -144,7 +144,6 @@
 									</ul>
 									<div class="tabs__area">
 										<div class="tabs__container">
-											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 											<p><span>Why do we use it?</span>  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
 											<p><span>Where does it come from?</span> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 										</div>		
@@ -172,198 +171,9 @@
 							<div class="detail__content-popular popular-product">
 								<div class="popular-product__title sidebar__title">Related products</div>
 
-								<div class="popular-product__row">
-									<div class="popular-product__column">
-										<div class="popular-product__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="detail.html">
-													<img src="img/cart/02.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<div class="cart__rating" data-total-value="0">
-														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-													</div>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="detail.html">
-													Keurig K-Elite Coffee Maker 
-													<span class="cart__body-price">$163.01</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="popular-product__column">
-										<div class="popular-product__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="detail.html">
-													<img src="img/cart/04.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<div class="cart__rating" data-total-value="0">
-														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-													</div>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="detail.html">
-													Keurig K-Elite Coffee Maker 
-													<span class="cart__body-price">$163.01</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="popular-product__column">
-										<div class="popular-product__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="detail.html">
-													<img src="img/cart/05.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<div class="cart__rating" data-total-value="0">
-														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-													</div>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="detail.html">
-													Keurig K-Elite Coffee Maker 
-													<span class="cart__body-price">$163.01</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="popular-product__column">
-										<div class="popular-product__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="detail.html">
-													<img src="img/cart/06.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<div class="cart__rating" data-total-value="0">
-														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-													</div>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="detail.html">
-													Keurig K-Elite Coffee Maker 
-													<span class="cart__body-price">$163.01</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="popular-product__column">
-										<div class="popular-product__cart cart">
-											<div class="cart__overlay">
-												new
-											</div>
-											<div class="cart__img">
-												<a href="detail.html">
-													<img src="img/cart/07.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<div class="cart__rating" data-total-value="0">
-														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-													</div>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="detail.html">
-													Keurig K-Elite Coffee Maker 
-													<span class="cart__body-price">$163.01</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
+								@@include('blocks/_featured__slider.html',{
+									"featured__slider-class":"featured__slider--sm"
+								})
 
 							</div>
 							<!-- popular-product end -->
