Fix page all-categories-drid

--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -87,7 +87,9 @@
 							<!-- sidebar-nav -->
 							@@include('blocks/_sidebar-nav.html',{
 								"sidebar-nav__class":"shop-col__sidebar-nav",
-								"sidebar-nav__title":"All Categories"
+								"sidebar-nav__title":"sidebar-nav__title--light",
+								"sidebar-nav__item":"sidebar-nav__item--light",
+								"sidebar-nav__link":"sidebar-nav__link--light"
 							})
 							<!-- sidebar-nav end -->
 
