--- a/app/about.html
+++ b/app/about.html
@@ -111,7 +111,7 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/testimonial/01.jpg" alt="">
 									</div>
 									<div class="our-team__body">
 										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
@@ -129,7 +129,7 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/testimonial/02.jpg" alt="">
 									</div>
 									<div class="our-team__body">
 										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
@@ -147,7 +147,7 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/testimonial/03.jpg" alt="">
 									</div>
 									<div class="our-team__body">
 										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
@@ -165,7 +165,7 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/testimonial/04.jpg" alt="">
 									</div>
 									<div class="our-team__body">
 										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
@@ -183,7 +183,7 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/testimonial/05.png" alt="">
 									</div>
 									<div class="our-team__body">
 										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
@@ -201,7 +201,7 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/testimonial/06.jpg" alt="">
 									</div>
 									<div class="our-team__body">
 										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
